resultados_correcciones/fernandezPablo.txt
===== CORRECCIÓN PARA fernandezPablo =====
Fecha: sáb 08 mar 2025 17:05:37 CET

===== RESULTADOS DE COMPILACIÓN =====
entregas/Cliente.java:40: error: method dividir in class Calculadora cannot be applied to given types;
        calculadora.dividir();
                   ^
  required: double
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error

ERROR: La compilación falló. No se ejecutó el código.
===== FIN DE LA CORRECCIÓN =====
